--- a/NLayer.API/appsettings.json
+++ b/NLayer.API/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    "NpgSqlConnection": "Server=localhost:5435;User Id=postgres;Password=postgres;Database=inventory_db",
     "SqlConnection": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=NLayer;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
